# Claude-Trading

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
bus/: __init__.py  event_bus.py  events.py
claude/: __init__.py  regime_runner.py  response_parser.py
claude/prompts/: regime.md
config/: paper.yaml  prod.yaml  settings.py
dashboard/: __init__.py  app.py
dashboard/static/: index.html
data/: __init__.py  candle_aggregator.py  feature_store.py
data/feeds/: binance_ws.py
docker/: Dockerfile  docker-compose.yml
execution/: __init__.py  base.py  engine.py  paper_executor.py  reconnect.py  recovery.py
ledger/: __init__.py  database.py  models.py  pnl_tracker.py  tca.py  trade_logger.py
monitoring/: __init__.py  alert.py  healthcheck.py  slo.py
replay/: __init__.py  canary.py  evaluation.py  replayer.py
risk/: __init__.py  base.py  daily_loss.py  exposure.py  gate.py  kill_switch.py  position_limit.py  time_policy.py
signals/: __init__.py  base.py  composite.py  momentum.py  volume_spike.py  vwap.py
strategy/: __init__.py  controller.py  modes.py  universe.py
tests/: conftest.py  test_binance_ws.py  test_controller.py  test_event_bus.py  test_execution.py  test_feature_store.py  test_invariants.py  test_ledger.py  test_monitoring.py  test_replay.py  test_risk_gate.py  test_signals.py
tests/fixtures/: __init__.py  candle_data.py
